<?xml version="1.0"?>
<package format="2">
  <name>nags_planning</name>
  <version>0.0.0</version>
  <description>The nags_planning package</description>

  <maintainer email="chg947089399@sjtu.edu.cn">clarence</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>
